--- a/index.html
+++ b/index.html
@@ -7,10 +7,26 @@
     <link rel="stylesheet" href="styles/architects.css">
 </head>
 <body class="work-sans-font">
-   <header>
-    <nav class="navbar">
+   <header class="bg-light">
+    <nav class="navbar display-flex">
           <h3 class="brand">G3 Architects</h3>
+          <ul class="nav-link display-flex">
+              <li class="nav-item"><a href="" class="nav-link text-gray">Home</a></li>
+              <li class="nav-item"><a href="" class="nav-link text-gray">About</a></li>
+              <li class="nav-item"><a href="" class="nav-link text-gray">Contact Us</a></li>
+              <li class="nav-item"><a href="" class="nav-link text-gray">Login</a></li>
+          </ul>
     </nav>
+    <div class="banner">
+        <div class="banner-contant">
+           <h1 class="banner-title">Brand New 
+            Group of Architects 
+            </h1>   
+            <p class="banner-text">We are designers, planners, consultants and technical specialists working in a culture where thinkersthinkers, makersmakers and dreamersdreamers converge.</p>
+            <button class="btn-banner">Explore More</button>
+        </div>
+            <img class="banner-image" src="images/banner.png" alt="">
+    </div>
    </header>
    <main>
 
