--- a/index.html
+++ b/index.html
@@ -23,13 +23,39 @@
             Group of Architects 
             </h1>   
             <p class="banner-text">We are designers, planners, consultants and technical specialists working in a culture where thinkersthinkers, makersmakers and dreamersdreamers converge.</p>
-            <button class="btn-banner">Explore More</button>
+            <button class="btn-primary">Explore More</button>
         </div>
             <img class="banner-image" src="images/banner.png" alt="">
     </div>
    </header>
    <main>
+    <!-- teams section start -->
+      <section class="teams display-flex">
+           <div class="team-image-container">
+             <img src="images/team1.png" alt="two architect discussing about design">
+         <img src="images/team2.png" alt="">
+         <img src="images/team3.png" alt="">
+         <img src="images/team4.png" alt="">
+             
+           </div>
+           <div class="our-features">
+                <h3 class="section-title">
+                   <span id="qucik-list" class="text-light-gray"> Quick list</span> <span >of Our</span> <span class="text-primary"> Features</span>
+                </h3>
+                <p class="feature-text text-light-gray">Project kickoff is an exciting time. Finally, after diligently comparing vendors, weighing options, and getting the paperwork approved, it’s time for your platform to take shape, for your idea to come to fruition.</p>
+                <button class="btn-primary">Explore More</button>
 
+           </div>
+      </section>
+      <!-- features  section start -->
+       <section>
+          <h3 class="section-title">Some Facts</h3>
+          <p class="text-light-gray">While we are exploring these unique facts, find out how winning a coin flip has nothing to do with luck.</p>
+       </section>
+       <!-- some facts -->
+        <section class="some-facts">
+
+        </section>
    </main>
    <footer>
 
